<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id= "@+id/HomeXML"
        android:title="@string/title_home"
        android:icon="@drawable/ic_home_black_50dp"
        android:enabled="true"
        />


    <item
        android:enabled="true"
        android:id= "@+id/ListaDeVehiculosRegistradosXML"
        android:title="@string/title_lista"
        android:icon="@drawable/ic_list_black_50dp"
        />
    <item
        android:enabled="true"
        android:id= "@+id/LoginDeConductorXML"
        android:title="@string/title_login"
        android:icon="@drawable/ic_vpn_key_black_50dp"
        />


    <item
        
        android:enabled="true"
        android:id= "@+id/RegistroDeConductorXML"
        android:title="@string/title_registro"
        android:icon="@drawable/ic_person_add_black_50dp"

        />
</menu>