<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.antonio.gesapp.Slash"
    android:orientation="vertical"
    >

    <LinearLayout
        android:weightSum="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_weight=".7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >


            <TextView
                android:layout_margin="5dp"
                android:background="@color/colorPrimary_light"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/texto_bienvenida"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/tituloMenuSlC" />

            <ImageView
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_security_acent_150dp"
                android:contentDescription="@string/escudo"
                tools:ignore="NestedWeights" />




        </LinearLayout>

        <LinearLayout
            android:layout_margin="5dp"
            android:layout_weight=".3"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:gravity="center"
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/texto_inteligencia"
                android:textSize="@dimen/subtituloMenuSlC"
                android:textColor="@color/colorIcons"
                />



        </LinearLayout>

    </LinearLayout>

</LinearLayout>
