<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.antonio.gesapp.MainActivity">



    <android.support.design.widget.CoordinatorLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1">

            <LinearLayout
                android:layout_margin="7dp"
                android:id="@+id/layout_weight2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                android:background="@color/colorPrimary_dark"
                android:orientation="vertical">


                <TextView
                    android:layout_marginTop="7dp"
                    android:layout_weight="1"
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/tituloMenu"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/tituloMenuC"
                    tools:ignore="NestedWeights" />

                <TextView
                    android:layout_weight="1"
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/texto_subtitulo_Menu"
                    android:textAlignment="center"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="@dimen/subtituloMenuC" />

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="match_parent"
                        android:layout_height="160dp"
                        android:layout_gravity="center_horizontal"

                        android:src="@drawable/gesmenu" />


                </LinearLayout>


            </LinearLayout>


            <LinearLayout

                android:layout_weight=".7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:orientation="vertical">

                <!--

                 <View

                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorDivider"
                android:visibility="visible" />
                 <TextView
                    android:text="@string/texto_menu"
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:textAlignment="center"
                    android:textSize="@dimen/menuC" />
                -->





                <LinearLayout

                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                    <LinearLayout

                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">


                        <Button
                            android:id="@+id/botonRegistroDeCoductorXML"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableTop="@drawable/ic_person_add_acent_40dp"
                            android:elevation="8dp"
                            android:text="@string/texto_registrar_Conductor"
                            android:textAlignment="center"
                            android:textAllCaps="false"
                            android:textSize="@dimen/tamanoDeLosTextosBotonesC"
                            android:theme="@style/buttonStyleMenu"
                            />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">


                        <Button
                            android:id="@+id/botonLoginDeConductorXML"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableTop="@drawable/ic_vpn_key_acent_40dp"
                            android:elevation="8dp"
                            android:text="@string/texto_comprobar"
                            android:textAlignment="center"
                            android:textAllCaps="false"
                            android:textSize="@dimen/tamanoDeLosTextosBotonesC"
                            android:theme="@style/buttonStyleMenu"

                            />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">


                        <Button
                            android:id="@+id/botonVehiculosRegistradosXML"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableTop="@drawable/ic_list_acent_40dp"
                            android:elevation="8dp"
                            android:text="@string/texto_listaDePlacas"
                            android:textAlignment="center"
                            android:textAllCaps="false"
                            android:textSize="@dimen/tamanoDeLosTextosBotonesC"
                            android:theme="@style/buttonStyleMenu"

                            />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">


                        <Button
                            android:id="@+id/botonNuevoInicioDeCesionXML"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableTop="@drawable/ic_loop_acent_40dp"
                            android:elevation="8dp"
                            android:text="@string/texto_nevo"
                            android:textAlignment="center"
                            android:textAllCaps="false"
                            android:textSize="@dimen/tamanoDeLosTextosBotonesC"
                            android:theme="@style/buttonStyleMenu"

                            />

                    </LinearLayout>
                </LinearLayout>



            </LinearLayout>


        </LinearLayout>





        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabStar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:elevation="8dp"
            android:src="@android:drawable/btn_star"
            tools:ignore="RtlHardcoded"
            tools:targetApi="lollipop"
            app:layout_anchor="@id/layout_weight2"
            app:layout_anchorGravity="bottom|right|end"

            />

    </android.support.design.widget.CoordinatorLayout>
    </RelativeLayout>





